fix(style): Expand blockquotes on mobile
**What?**

1. Expand blockquotes on narrow window widths

**Why?**

They were previously 55% wide on all widths, leading to
one-word-per-line quotes.

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -95,10 +95,16 @@ blockquote > *:last-child {
 }
 
 section > blockquote {
+  /* Make blockquotes themselves, not the content within them, narrow. */
   width: 55%;
 }
+@media (max-width: 760px) {
+  section > blockquote {
+    width: 100%;
+  }
+}
 
-section > blockquote * {
+section > blockquote > * {
   width: 100%;
 }
 
